--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,9 +21,7 @@ img{
 
 body{
     width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+    overflow-x: hidden;
 }
 
 footer{
